# battery_monitor

./: CMakeLists.txt  README.md  pm_static.yml  prj.conf  promicro_voltage_monitor.overlay
src/: main.c
src/application/: application.c
src/bluetooth/: bluetooth.c  bluetooth.h  service.c  service.h
src/boards/arm/promicro_nrf/: Kconfig.board  Kconfig.defconfig  promicro_nrf.dts  promicro_nrf_defconfig
src/hardware/: led.c  led.h  mux.c  mux.h
src/sensor/: internal_temp.c  internal_temp.h  main_voltage.c  main_voltage.h
